uploading big changes lol

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="main.js"></script>
     <script src="classes/utils.js"></script>
+    <script src="content/blocks.js"></script>
+    <script src="content/trees.js"></script>
     <script src="classes/simplex-noise.js"></script>
     <script src="classes/perlin-noise.js"></script>
     <script src="classes/camera.js"></script>
@@ -23,6 +25,7 @@
     <img src="textures/water.png" id="water">
     <img src="textures/leaves.png" id="leaves">
     <img src="textures/glowstone.png" id="glowstone">
+    <img src="textures/log.png" id="log">
     <style>
         html, body {
             margin: 0px;
