Added deltaTime and fixed player move velocity

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="background"></canvas>
     <div class="noselect" id="info"><p style="color: white;
         font-family: 'Courier New', Courier, monospace;">Refresh to generate new worlds!</p></div>
 </body>
