--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             z-index: 100;
             text-align: center;
         }
+        #coords {
+            position: absolute;
+            top: 0%;
+            right: 5%;
+            z-index: 100;
+            text-align: right;
+        }
         .noselect {
             -webkit-touch-callout: none;
             -webkit-user-select: none;
@@ -61,7 +68,11 @@
 </head>
 <body>
     <canvas id="background"></canvas>
-    <div class="noselect" id="info"><p style="color: white;
-        font-family: 'Courier New', Courier, monospace;">Refresh to generate new worlds!</p></div>
+    <div class="noselect">
+        <p  id="info" style="color: white;
+        font-family: 'Courier New', Courier, monospace;">Refresh to generate new worlds!</p>
+        <p id="coords" style="color: white;
+        font-family: 'Courier New', Courier, monospace;">x: 100</br>y: 120</p>
+    </div>
 </body>
 </html>
