Add body info and chaged stars spectral type and radius rarity

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             position: absolute;
         }
     </style>
+    <link rel="icon" href="icon.png">
     <script src="classes/measure.js"></script>
     <script src="classes/utils.js"></script>
     <script src="classes/body.js"></script>
