--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="classes/measure.js"></script>
     <script src="classes/utils.js"></script>
     <script src="classes/body.js"></script>
+    <script src="classes/star.js"></script>
+    <script src="classes/planet.js"></script>
     <script src="classes/starsystem.js"></script>
     <script src="classes/canvas.js"></script>
     <script src="classes/world.js"></script>
@@ -25,6 +27,7 @@
     <script src="classes/controller.js"></script>
     <script src="classes/hud.js"></script>
     <script src="classes/seedrandom.js"></script>
+    <script src="classes/time.js"></script>
     <script src="main.js"></script>
 </head>
 <body onload="start()">
