changed info text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="info">
-                <p>Todos os projetos possuem o ícone <a style="font-weight: bolder;">?</a> em algum canto superior da tela.<br>Posicione o mouse sobre ele para informações adicionais sobre o projeto.</p>
+                <p>Todos os projetos possuem o ícone "<a style="font-weight: bolder;">?</a>" em algum canto superior da tela.<br>Posicione o mouse sobre ele para informações adicionais sobre o projeto.</p>
             </div>
         </div>
     </section>
